Fix alignment of basics section

--- a/style.css
+++ b/style.css
@@ -77,6 +77,9 @@ section {
   display: flex;
   align-items: center;
 }
+.align-center > * {
+  flex-grow: 1;
+}
 .title {
   display: flex;
   flex-direction: row;
